--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 body {
-    margin: 0;
-    padding: 0;
-    background: red;
+	margin: 0;
+	padding: 0;
+	background: red;
+}
+
+
+h1 {
+	text-transform: uppercase;
+	color: #eee;
 }
